--- a/package.json
+++ b/package.json
@@ -52,8 +52,17 @@
   },
   "devDependencies": {
     "@types/node": "^7.0.43",
+    "autoprefixer": "^8.5.1",
+    "bootstrap": "^4.1.1",
+    "css-loader": "^0.28.11",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.9.0",
+    "popper.js": "^1.14.3",
+    "postcss-loader": "^2.1.5",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "ts-loader": "^4.3.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
