--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.0",
+    "@types/opn": "^5.1.0",
     "autoprefixer": "^8.5.1",
     "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
@@ -78,5 +79,8 @@
     "vscjava.vscode-java-debug",
     "vscjava.vscode-java-test",
     "vscjava.vscode-maven"
-  ]
+  ],
+  "dependencies": {
+    "opn": "^5.3.0"
+  }
 }
