--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.6",
     "@types/node": "^8.0.0",
     "autoprefixer": "^8.5.1",
     "bootstrap": "^4.1.1",
